apps/prod/wallabag/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
        node: worker
      annotations:
        operator.1password.io/inject: "wallabag-web"
    spec:
      containers:
      - name: wallabag-web
        image: wallabag/wallabag:2.6.10
        resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: wallabag
    node: worker
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
  - host: prod-wallabag
    http:
      paths:
      - backend:
          service:
            name: wallabag
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prod-wallabag
    secretName: prod-wallabag-tls
