apps/prod/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: wallabag.png
    gethomepage.dev/name: wallabag
    #    cert-manager.io/cluster-issuer: letsencrypt-staging
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
  - host: prod-wallabag
    http:
      paths:
      - backend:
          service:
            name: wallabag
            port:
              number: 80
        path: /
        pathType: Prefix 
  tls:
  - hosts:
    - prod-wallabag
    secretName: prod-wallabag-tls
